# WebsterEngine

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
assets/material/: basic.wemat  matte_brick.wemat  matte_pavement.wemat
assets/scene/: boxes_demo.wescn  demo.wescn  spheres_demo.wescn  wall_demo.wescn
assets/shader/basic/frag/: basic.frag
assets/shader/basic/vert/: basic.vert
assets/shader/shadow/vert/: shadow.vert
assets/shader/sky/frag/: sky.frag
assets/shader/sky/vert/: sky.vert
assets/shader/splash/frag/: splash.frag
assets/shader/splash/vert/: splash.vert
assets/shaders/basic/frag/: triangle.frag
assets/shaders/basic/vert/: triangle.vert
dev/: physics_loop.txt
include/cam/: Camera.h
include/cfg/: cfg.h  launch_options.h
include/core/: Logger.h  WebsterEngine.h  Window.h
include/load/: MaterialLoader.h  ModelLoader.h  SceneLoader.h
include/prim/: Triangle.h
include/renderer/: Renderer.h
include/scene/: Scene.h
include/shader/: Shader.h  ShaderHandler.h
include/sky/: Skybox.h
include/state/: State.h  StateHandler.h
include/tex/: Texture.h  TextureHandler.h
include/utils/: CollisionUtils.h  GLMStream.h  utils.h
include/window/: Window.h
src/: main.cpp
src/cam/: Camera.cpp
src/core/: Logger.cpp  Window.cpp
src/load/: MaterialLoader.cpp  ModelLoader.cpp  SceneLoader.cpp
src/prim/: Triangle.cpp
src/renderer/: Renderer.cpp
src/scene/: Scene.cpp
src/shader/: Shader.cpp  ShaderHandler.cpp
src/sky/: Skybox.cpp
src/state/: State.cpp  StateHandler.cpp
src/tex/: Texture.cpp  TextureHandler.cpp
src/utils/: CollisionUtils.cpp  GLMStream.cpp  utils.cpp
